--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^4.7",        
-        "squizlabs/php_codesniffer": "^2.3"
+        "squizlabs/php_codesniffer": "^2.3",
+        "satooshi/php-coveralls": "^0.6.1"
     },
     "bin": [
         "bin/scheduler"
