--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ services:
   - mongodb
 
 before_script:
+  - echo 'extension = mongo.so' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
   - composer self-update
   - composer install
 
