--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "require-dev": {
         "phpunit/phpunit": "^4.7",        
         "squizlabs/php_codesniffer": "^2.3",
-        "satooshi/php-coveralls": "^0.6.1"
+        "satooshi/php-coveralls": "^0.6.1",
+        "mockery/mockery": "^0.9.4"
     },
     "bin": [
         "bin/scheduler"
