--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ services:
 before_script:
   - echo 'extension = mongo.so' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
   - composer self-update
-  - composer install
+  - composer install --prefer-source
 
 script:
     - vendor/bin/phpunit --coverage-clover=build/logs/clover.xml
